# SpdlogWrapper

./: .clang-format  .gitignore  CMakeLists.txt  README.md
config/: config.json
include/spdlogWrapper/wrapper/: logger_manager.h  sink_manager.h  spdlog-api.h  spdlog_manager.h  spdlog_wrapper_api.h  wrapper_api.h
include/wrapper/: logger_manager.h  sink_manager.h  spdlog_manager.h  spdlog_wrapper_api.h
src/: main.cpp
